--- a/minik.client/index.html
+++ b/minik.client/index.html
@@ -1,15 +1,19 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Minik</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Minik | En Fazla Sevilecek Rezervasyon Websitesi</title>
     <link rel="stylesheet" href="./index.css" />
 </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Dalga animasyonu için dalga-container div'i eklendi -->
+    <div class="wave-container">
+      <div class="wave"></div>
+    </div>
   </body>
 </html>
